# conexions

./: .coverage  .gitignore  .mailmap  README.md  conexions.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup2.py
conexions/: __init__.py
doc/: README.gl.md
doc/TODO/: current.gl.md  current.md  full.gl.md  full.md  v1.3.gl.md  v1.3.md
doc/changelog/: index.gl.md  index.md  v1.3.gl.md  v1.3.md  v1.4.gl.md  v1.4.md  v1.5.gl.md  v1.5.md
doc/xFCR/: indice.md  v1.3.md  v2.3.md
src/conexions/: __init__.py  anonymity.py  country.py  dto_proxy.py  excepcions.py  protocol.py  proxy.old.py  proxy.py  proxy_client.py  xproxie.py
src/conexions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: dto_proxy_test.py  proxy_client_test.py  proxy_test.old.py  proxy_test.py
