[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conexions"
version = "1.4"
description = "Unified web connection module with automatic proxy rotation"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Ran#", email = "ran.hash@proton.me" }]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "requests>=2.32.5",
    "yaspin>=3.0.0",
]

[project.urls]
Homepage = "https://www.github.com/Ran-n/conexions"
Issues = "https://www.github.com/Ran-n/conexions/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/conexions"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
